# Face-Retri

./: .gitignore  README.md  demo.cpp  select_query.py
CosineLSH/: CMakeLists.txt  README.md  main.cpp
CosineLSH/modules/: SafeQueue.h  SafeRes.h  ThreadPool.h  config  config.cpp  cosine_lsh.cpp  cosine_lsh.h
FaceAlignment/: CMakeLists.txt
FaceAlignment/src/test/: face_alignment_test.cpp
FaceIdentification/src/test/: CMakeLists.txt  face_image_extract.cpp  face_image_retri_brute.cpp  test_face_recognizer.cpp  test_face_verification.cpp
LRU/: CMakeLists.txt
LRU/include/: CMakeLists.txt  LRUCache.cpp  LRUCache.h  dlinknode.h  logger.cpp  logger.h
LRU/log/: log.txt
LRU/src/: CMakeLists.txt  main.cpp
